// ============================================
// PRISMA SCHEMA - CAFE GONKU
// QR-Based Restaurant Ordering System
// ============================================

generator client {
  provider   = "prisma-client-js"
  engineType = "client" // Required for Prisma 7 with driver adapters like Neon
}

datasource db {
  provider = "postgresql"
}

// ============================================
// 1. USER MANAGEMENT
// ============================================
// Owner: Kelola menu, meja, QR code, analytics
// Kitchen: Lihat order queue, update status pesanan

enum UserRole {
  OWNER
  KITCHEN
}

model User {
  id        String   @id @default(cuid())
  email     String   @unique
  password  String   // Hashed dengan bcrypt
  name      String
  role      UserRole
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("users")
  
  // Relations
  accounts      Account[]
  sessions      Session[]
}

model Session {
  id           String   @id @default(cuid())
  userId       String
  expiresAt    DateTime
  token        String
  createdAt    DateTime
  updatedAt    DateTime
  ipAddress    String?
  userAgent    String?
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([token])
  @@map("sessions")
}

model Account {
  id           String    @id @default(cuid())
  userId       String
  accountId    String
  providerId   String
  accessToken  String?
  refreshToken String?
  expiresAt    DateTime?
  password     String?
  createdAt    DateTime
  updatedAt    DateTime
  user         User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("accounts")
}

model Verification {
  id         String    @id @default(cuid())
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime?
  updatedAt  DateTime?

  @@map("verification")
}

// ============================================
// 2. TABLE & QR CODE MANAGEMENT
// ============================================
// Setiap meja punya QR code unik
// User scan QR → redirect ke /order?table=<qrCode>

model Table {
  id          String   @id @default(cuid())
  tableNumber Int      @unique // Nomor meja fisik (1, 2, 3, ...)
  qrCode      String   @unique // String unik untuk QR: "GONKU_TABLE_1_ABC123"
  isActive    Boolean  @default(true) // Meja bisa di-disable sementara
  capacity    Int      @default(4) // Kapasitas kursi
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  // Relations
  orders Order[]

  @@index([qrCode])
  @@index([isActive])
  @@map("tables")
}

// ============================================
// 3. MENU
// ============================================
// Menu makanan & minuman yang tersedia di Cafe Gonku

enum MenuCategory {
  FOOD    // Makanan
  DRINK   // Minuman
  SNACK   // Cemilan
  DESSERT // Dessert
}

enum MenuHighlightType {
  NONE
  BEST_SELLER
  RECOMMENDED
  DELICIOUS
}

model Menu {
  id          String       @id @default(cuid())
  name        String       // Nama menu: "Mie Nyemek", "Es Teh Manis"
  description String?      @db.Text // Deskripsi menu
  price       Int          // Harga BASE dalam Rupiah (integer)
  category    MenuCategory
  imageUrl    String?      // URL gambar di Supabase Storage
  isAvailable Boolean      @default(true) // Kitchen bisa set false kalau habis
  isActive    Boolean      @default(true) // Soft delete untuk owner
  highlightType MenuHighlightType @default(NONE) // Badge khusus untuk customer: best seller / recommended / delicious
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt

  // Relations
  menuOptions MenuOption[] // Menu bisa punya options (level pedas, ukuran, dll)
  orderItems  OrderItem[]

  @@index([category])
  @@index([isAvailable])
  @@index([isActive])
  @@index([highlightType])
  @@index([createdAt])
  @@map("menus")
}

// ============================================
// 4. MENU OPTION
// ============================================
// Opsi customization per menu (misal: Level Pedas, Ukuran, Rasa)
// Menu TANPA opsi = tidak perlu bikin row di tabel ini

model MenuOption {
  id         String   @id @default(cuid())
  menuId     String
  menu       Menu     @relation(fields: [menuId], references: [id], onDelete: Cascade)
  name       String   // "Rasa", "Level Pedas", "Ukuran"
  isRequired Boolean  @default(true) // User wajib pilih atau optional?
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  // Relations
  values MenuOptionValue[]

  @@index([menuId])
  @@map("menu_options")
}

// ============================================
// 5. MENU OPTION VALUE
// ============================================
// Pilihan dalam option
// Contoh: Option "Rasa" → values: "Pedas Jeruk", "Asin Jeruk", "Pedas Biasa"

model MenuOptionValue {
  id           String     @id @default(cuid())
  menuOptionId String
  menuOption   MenuOption @relation(fields: [menuOptionId], references: [id], onDelete: Cascade)
  label        String // "Pedas Jeruk", "Level 5", "Small", "Large"
  priceAdjust  Int    @default(0) // Tambahan/pengurangan harga (misal: Large +10000)
  createdAt    DateTime @default(now())

  // Relations
  orderItemOptions OrderItemOption[]

  @@index([menuOptionId])
  @@map("menu_option_values")
}

// ============================================
// 6. ORDER
// ============================================
// Pesanan dari customer

enum OrderStatus {
  PENDING   // Belum bayar
  PAID      // Sudah bayar, masuk kitchen queue
  PREPARING // Kitchen sedang masak
  READY     // Siap diantar ke meja
  SERVED    // Sudah diantar & selesai
  CANCELLED // Dibatalin (misal payment gagal/expired)
}

enum PaymentStatus {
  PENDING // Menunggu pembayaran
  PAID    // Sudah dibayar
  FAILED  // Pembayaran gagal
  EXPIRED // Pembayaran kadaluarsa
}

enum OrderServiceType {
  DINE_IN
  TAKEAWAY
}

model Order {
  id        String   @id @default(cuid())
  orderCode String   @unique // Kode unik: "GONKU-001", "GONKU-002"
  accessToken String @unique @default(cuid()) // Customer ownership token
  
  // Table reference
  tableId String
  table   Table  @relation(fields: [tableId], references: [id])
  
  // Order details
  totalAmount    Int              @default(0) // Total harga keseluruhan
  status         OrderStatus      @default(PENDING)
  serviceType    OrderServiceType @default(DINE_IN)
  priorityScore  Float            @default(0) // Skor priority queue kitchen
  
  // Payment info
  paymentStatus   PaymentStatus @default(PENDING)
  paymentMethod   String? // "doku_checkout", "qris", "cash"
  paymentRedirectUrl    String? @unique // URL redirect checkout dari payment gateway
  paymentGatewayOrderId String? @unique // ID invoice/order dari payment gateway
  paidAt          DateTime? // ⭐ Timestamp payment (untuk priority queue!)
  paymentExpiresAt DateTime? // Batas waktu pembayaran gateway
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  orderItems OrderItem[]
  orderLogs  OrderLog[]

  // Indexes untuk performa
  @@index([paymentStatus, paidAt]) // Payment lookup
  @@index([paymentStatus, status, priorityScore, paidAt]) // Priority queue kitchen
  @@index([status, createdAt]) // Kitchen queue: filter order aktif & urutkan
  @@index([tableId])
  @@index([status])
  @@index([createdAt]) // Reporting range queries
  @@map("orders")
}

// ============================================
// 7. ORDER ITEM
// ============================================
// Item-item dalam satu order

model OrderItem {
  id       String @id @default(cuid())
  orderId  String
  order    Order  @relation(fields: [orderId], references: [id], onDelete: Cascade)
  menuId   String
  menu     Menu   @relation(fields: [menuId], references: [id])
  
  quantity Int // Jumlah item yang dipesan
  price    Int // Snapshot harga dasar per item sebelum option adjustments
  
  // Notes TAMBAHAN dari customer (OPTIONAL)
  // Untuk request di luar option yang disediakan
  // Contoh: "matang banget", "tanpa bawang", "dibungkus terpisah"
  notes String? @db.Text
  
  createdAt DateTime @default(now())
  
  // Relations
  selectedOptions OrderItemOption[] // Options yang dipilih customer

  @@index([orderId])
  @@index([menuId])
  @@map("order_items")
}

// ============================================
// 8. ORDER ITEM OPTION
// ============================================
// Menyimpan pilihan option yang dipilih customer saat order
// Snapshot data agar tidak berubah kalau owner update option

model OrderItemOption {
  id                String          @id @default(cuid())
  orderItemId       String
  orderItem         OrderItem       @relation(fields: [orderItemId], references: [id], onDelete: Cascade)
  menuOptionValueId String
  menuOptionValue   MenuOptionValue @relation(fields: [menuOptionValueId], references: [id])
  
  // Snapshot data saat order dibuat
  optionName  String // "Rasa", "Level Pedas", "Ukuran"
  optionValue String // "Pedas Jeruk", "Level 5", "Large"
  priceAdjust Int    // Tambahan harga dari option ini
  
  createdAt DateTime @default(now())

  @@index([orderItemId])
  @@map("order_item_options")
}

// ============================================
// 9. DAILY CASH RECORD
// ============================================
// Catatan kas/tunai harian manual untuk analytics

model DailyCashRecord {
  id         String   @id @default(cuid())
  date       DateTime @db.Date @unique // Tanggal laporan kas harian (YYYY-MM-DD)
  amount     Int      @default(0) // Total kas tunai yang diterima pada hari tersebut
  notes      String?  @db.Text
  recordedBy String? // Nama/email petugas yang terakhir mengubah angka kas
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([date])
  @@map("daily_cash_records")
}

// ============================================
// 10. ORDER LOG
// ============================================
// Audit trail untuk tracking perubahan status order
// Opsional tapi berguna untuk debugging

model OrderLog {
  id        String   @id @default(cuid())
  orderId   String
  order     Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  status    String // Status yang diupdate
  message   String   @db.Text // Deskripsi perubahan
  createdBy String? // User ID yang melakukan update (owner/kitchen)
  createdAt DateTime @default(now())

  @@index([orderId])
  @@index([createdAt])
  @@map("order_logs")
}
